--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -27,11 +27,14 @@ jobs:
 
       - name: Set up Cosign
         uses: sigstore/cosign-installer@v3
-        with:
-          cosign-release: 'v2.4.3'
 
       - name: Check cosign installation
         run: cosign version
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3.4.0
+
+      - name: docker/setup-buildx-action@v3.9.0
 
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -49,6 +52,7 @@ jobs:
             latest=true
 
       - name: Build and push Docker image
+        id: build-and-push
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
@@ -57,7 +61,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Keyless sign the image
-        id: cosign
+        env:
+          DIGEST: ${{ steps.build-and-push.outputs.digest }}
         run: |
-          export COSIGN_EXPERIMENTAL=1
-          cosign sign ghcr.io/${{ github.repository }}:latest
+          cosign sign --yes ghcr.io/${{ github.repository }}:${DIGEST}
