--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -34,7 +34,8 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3.4.0
 
-      - name: docker/setup-buildx-action@v3.9.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3.9.0
 
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
