--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -26,7 +26,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       ECR_REPOSITORY: "ohisa/tasky"
-      ECR_REGISTRY: "296062560614.dkr.ecr.us-west-2.amazonaws.com/ohisa/tasky"
+      ECR_REGISTRY: "296062560614.dkr.ecr.us-west-2.amazonaws.com"
 
     steps:
       - name: Checkout repository
