--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -6,8 +6,9 @@
 name: Build and Publish a Docker image
 
 on:
-  push:
-    branches: ['main']
+#  push:
+#    branches: ['main']
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
